--- a/ShopApp.WebUI/Views/Home/About.cshtml
+++ b/ShopApp.WebUI/Views/Home/About.cshtml
@@ -1,15 +1,8 @@
 ﻿
 
-<!DOCTYPE html>
+@section Categories
+{
+    @await Component.InvokeAsync("Categories")
+}
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <title>About</title>
-</head>
-<body>
-    @await Html.PartialAsync("~/Shared/_navbar.cshtml") 
-    Home/About
-</body>
-</html>
+About
