--- a/ShopApp.WebUI/Views/Product/Details.cshtml
+++ b/ShopApp.WebUI/Views/Product/Details.cshtml
@@ -1,18 +1,9 @@
-﻿@model ShopApp.WebUI.Models.Product
+﻿
 
 
-<!DOCTYPE html>
+@section Categories
+{
+    @await Component.InvokeAsync("Categories")
+}
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <title>Details</title>
-</head>
-<body>
-    @await  Html.PartialAsync("~/Shared/_navbar.cshtml")
-    <p>@Model.Name</p>
-    <p>@Model.Price</p>
-    <p>@Model.Description</p>
-</body>
-</html>
+Details
