--- a/ShopApp.WebUI/Views/Product/List.cshtml
+++ b/ShopApp.WebUI/Views/Product/List.cshtml
@@ -1,72 +1,41 @@
 ﻿@model ProductViewModel
 
+
 @{
     var popularClass = Model.Products.Count == 2 ? "popular" : "";
     var products = Model.Products;
 }
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>List</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <style>
-        .popular {
-            color: green;
-            font-weight: 700;
-        }
-    </style>
-</head>
-<body>
-    @await Html.PartialAsync("~/Shared/_navbar.cshtml")
-    @await Html.PartialAsync("~/Shared/_header.cshtml")
-
-    <main>
-        <div class="container">
-
-            <div class="row">
-                <div class="col-md-3">
-                    @* Kategoriler gelecek *@
-                    @await Component.InvokeAsync("Categories")
-                </div>
-                <div class="col-md-9">
-                    @* Ürünler gelecek *@
-
-
-                    @if (Model.Products.Count == 0)
-                    {
-                        @await Html.PartialAsync("~/Shared/_noproduct.cshtml")
-
-                    }
-                    else
-                    {
-                        <div class="row">
-
-
-
-                            @foreach (var product in products)
-                            {
-
-                                <div class="col-md-3">
-                                    @await Html.PartialAsync("~/Shared/_products.cshtml", product)
-                                </div>
+@section Categories
+{
+    @await Component.InvokeAsync("Categories")
+}
 
 
 
 
-                            }
-                        </div>
+@if (products.Count == 0)
+{
+    @await Html.PartialAsync("~/Views/Shared/_noproduct.cshtml")
 
-                    }
+}
+else
+{
+    <div class="row">
 
-                </div>
+
+
+        @foreach (var product in products)
+        {
+
+            <div class="col-md-3">
+                @await Html.PartialAsync("~/Views/Shared/_products.cshtml", product)
             </div>
 
-         
-        </div>
-    </main>
 
 
-</body>
-</html>
+
+        }
+    </div>
+
+}
+
