--- a/ShopApp.WebUI/Views/Shared/_navbar.cshtml
+++ b/ShopApp.WebUI/Views/Shared/_navbar.cshtml
@@ -1,5 +1,5 @@
 ﻿
-<div class="navbar bg-primary navbar-dark navbar-expand-sm">
+<div class="navbar bg-danger navbar-dark navbar-expand-sm">
     <div class="container">
         <ul class="navbar-nav">
             <li class="nav-item">
