--- a/ShopApp.WebUI/Views/Home/Index.cshtml
+++ b/ShopApp.WebUI/Views/Home/Index.cshtml
@@ -33,7 +33,7 @@ else
         {
 
             <div class="col-md-3">
-                @await Html.PartialAsync("~/Views/Shared/_products.cshtml", product)
+                @await Html.PartialAsync("~/Views/Shared/_product.cshtml", product)
             </div>
 
 
