--- a/ShopApp.WebUI/Views/Product/Details.cshtml
+++ b/ShopApp.WebUI/Views/Product/Details.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Product
 
 
 @section Categories
@@ -6,4 +6,21 @@
     @await Component.InvokeAsync("Categories")
 }
 
-Details
+<div class="card mb-3">
+    <div class="card-body">
+        <div class="row no-gutters">
+            <div class="col-md-3">
+                <img src="~/img/@Model.ImageUrl" class="card-img" />
+            </div>
+            <div class="col-md-9">
+
+                <h5 class="card-title">@Model.Name</h5>
+                <p class="card-text">@Model.Description</p>
+                <p class="card-text">
+                    <small class="text-muted">3 days ago</small>
+                </p>
+
+            </div>
+        </div>
+    </div>
+    </div>
