--- a/ShopApp.WebUI/Views/Product/List.cshtml
+++ b/ShopApp.WebUI/Views/Product/List.cshtml
@@ -28,7 +28,7 @@ else
         {
 
             <div class="col-md-3">
-                @await Html.PartialAsync("~/Views/Shared/_products.cshtml", product)
+                @await Html.PartialAsync("~/Views/Shared/_product.cshtml", product)
             </div>
 
 
