--- a/ShopApp.WebUI/Views/Shared/Components/Categories/Default.cshtml
+++ b/ShopApp.WebUI/Views/Shared/Components/Categories/Default.cshtml
@@ -1,8 +1,12 @@
 ﻿@model List<ShopApp.WebUI.Models.Category>
 
 <div class="list-group">
+    <a href="/Product/List" class="list-group-item list-group-item-action">Tüm Kategoriler</a>
     @foreach (var category in Model)
     {
-        <a href="#" class="list-group-item list-group-item-action">@category.Name</a>
+        <a href="/Product/List/@category.CategoryId"
+           class="list-group-item list-group-item-action @(ViewBag.SelectedCategory == category.CategoryId.ToString() ? "active":"")">
+            @category.Name
+        </a>
     }
 </div>
