--- a/ShopApp.WebUI/Views/Shared/_navbar.cshtml
+++ b/ShopApp.WebUI/Views/Shared/_navbar.cshtml
@@ -12,5 +12,10 @@
                 <a href="#" class="nav-link">Link 3</a>
             </li>
         </ul>
+
+        <form action="/product/list" class="form-inline">
+            <input name="q" type="text" class="form-control mr-2" placeholder="Search"/>
+            <button type="submit" class="btn btn-outline-light mr-0">Search</button>
+        </form>
     </div>
 </div>
