--- a/ShopApp.WebUI/Views/Shared/_navbar.cshtml
+++ b/ShopApp.WebUI/Views/Shared/_navbar.cshtml
@@ -3,10 +3,10 @@
     <div class="container">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a href="#" class="nav-link">Products</a>
+                <a href="/product/list" class="nav-link">Products</a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link">Link 2</a>
+                <a href="/product/create" class="nav-link">Add Product</a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">Link 3</a>
