--- a/ShopApp.WebUI/Views/Home/Index.cshtml
+++ b/ShopApp.WebUI/Views/Home/Index.cshtml
@@ -1,29 +1,13 @@
-﻿@model ProductViewModel
-
-
-@{
-    var popularClass = Model.Products.Count == 2 ? "popular" : "";
-    var products = Model.Products;
-}
-
-@section MessageBox{
-    <div class="alert alert-warning text-center m-0">
-        You have a message!
-    </div>
-}
-@section Header{
-
-    @await Html.PartialAsync("~/Views/Shared/_header.cshtml")
-}
-
-@section Scripts{
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-}
+﻿@model ProductListViewModel
 
 
 
-@if (products.Count == 0)
+@await Html.PartialAsync("~/Views/Shared/_header.cshtml")
+
+
+
+
+@if (Model.Products.Count == 0)
 {
     @await Html.PartialAsync("~/Views/Shared/_noproduct.cshtml")
 
@@ -34,7 +18,7 @@ else
 
 
 
-        @foreach (var product in products)
+        @foreach (var product in Model.Products)
         {
 
             <div class="col-md-3">
@@ -50,4 +34,9 @@ else
 }
 
 
+@section Scripts
+{
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+}
 
