--- a/ShopApp.WebUI/Views/Shared/_product.cshtml
+++ b/ShopApp.WebUI/Views/Shared/_product.cshtml
@@ -3,13 +3,13 @@
     <img class="card-img-top" src="~/img/@Model.ImageUrl" alt="" />
     <div class="card-body">
         <h5 class="card-title">@Model.Name</h5>
-        <p class="card-text">@Model.Description</p>
-        <a href="/product/details/@Model.ProductId" class="btn btn-primary btn-sm">İncele</a>
-        <a href="/product/edit/@Model.ProductId" class="btn btn-primary btn-sm">Edit</a>
+        <small class="text-muted">
+            <i class="fas fa-lira-sign"></i>@Model.Price
+        </small>
+    </div>
 
-        <form method="post" action="/product/delete" style="display:inline;">
-            <input type="hidden" name="ProductId" value="@Model.ProductId"/>
-            <button type="submit" class="btn btn-danger btn-sm">Delete</button>
-        </form>
+    <div class="card-footer text-center">
+        <a asp-controller="shop" asp-action="Details" asp-route-id="@Model.ProductId" class="btn btn-primary btn-sm">Details</a>
+        <a asp-controller="shop" asp-action="addtocart" asp-route-id="@Model.ProductId" class="btn btn-primary btn-sm">Add To Cart</a>
     </div>
 </div>
